--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,23 @@
         @apply h-[5px] w-[20px] rounded-lg
     }
 }
+
+.pdetails .react-tabs__tab-list{
+    padding-bottom: 10px;
+    border-bottom: none;
+}
+.pdetails .react-tabs__tab--selected {
+    border: none !important;
+    text-decoration: underline;
+    background: transparent !important;
+}
+
+.lateproducts .react-tabs__tab-list{
+    padding-bottom: 10px;
+    border-bottom: none;
+}
+.lateproducts .react-tabs__tab--selected {
+    border: none !important;
+    text-decoration: underline;
+    color: #FB2E86 !important;
+}
